5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1716_2505.log
== TEST (2019-05-14 16:37:14) 
-- CODE:
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
while(contador < k)
      resultado = resultado + (sinal*(x*expoente/factorial(expoente)))
      sinal = sinal* (-1)
      expoente = expoente +2
	   contador +=1
print (round(soma,10))
-- ERROR:
File "XXXX", line 7
    while(contador < k)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:39:01) 
-- CODE:
fron math inport
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x*expoente/factorial(expoente)))
      sinal = sinal* (-1)
      expoente = expoente +2
	   contador +=1
print (round(soma,10))
-- ERROR:
File "XXXX", line 1
    fron math inport
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:39:28) 
-- CODE:
from math import
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x*expoente/factorial(expoente)))
      sinal = sinal* (-1)
      expoente = expoente +2
	   contador +=1
print (round(soma,10))
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:39:50) 
-- CODE:
from math import
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x*expoente/factorial(expoente)))
      sinal = sinal* (-1)
      expoente = expoente +2
	   contador +=1
print (round(soma,10))
-- EXECUTION TIME:
0.150088
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 1
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:07) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x*expoente/factorial(expoente)))
      sinal = sinal* (-1)
      expoente = expoente +2
	   contador +=1
print (round(soma,10))
-- EXECUTION TIME:
0.124024
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while(contador < k)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:26) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
      sinal = sinal* (-1)
      expoente = expoente +2
	   contador +=1
print (round(soma,10))
-- EXECUTION TIME:
0.165107
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while(contador < k)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:37) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
      sinal = sinal*(-1)
      expoente = expoente + 2
	   contador +=1
print (round(soma,10))
-- EXECUTION TIME:
0.138637
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while(contador < k)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:38) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
      sinal = sinal*(-1)
      expoente = expoente + 2
	   contador +=1
print (round(soma,10))
-- EXECUTION TIME:
0.205558
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while(contador < k)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:39) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
      sinal = sinal*(-1)
      expoente = expoente + 2
	   contador +=1
print (round(soma,10))
-- EXECUTION TIME:
0.149184
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while(contador < k)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:46) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
      sinal = sinal*(-1)
      expoente = expoente + 2
	   contador +=1
print (round(soma,10))
-- ERROR:
File "XXXX", line 8
    while(contador < k)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:46) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
      sinal = sinal*(-1)
      expoente = expoente + 2
	   contador +=1
print (round(soma,10))
-- ERROR:
File "XXXX", line 8
    while(contador < k)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:46) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
      sinal = sinal*(-1)
      expoente = expoente + 2
	   contador +=1
print (round(soma,10))
-- EXECUTION TIME:
0.119648
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while(contador < k)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:46) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
      sinal = sinal*(-1)
      expoente = expoente + 2
	   contador +=1
print (round(soma,10))
-- ERROR:
File "XXXX", line 8
    while(contador < k)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:47) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k)
      resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
      sinal = sinal*(-1)
      expoente = expoente + 2
	   contador +=1
print (round(soma,10))
-- ERROR:
File "XXXX", line 8
    while(contador < k)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:53) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
 while(contador < k):
      resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
      sinal = sinal*(-1)
      expoente = expoente + 2
	   contador +=1
print (round(soma,10))
-- ERROR:
File "XXXX", line 8
    while(contador < k):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:41:18) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
while(contador < k):
	resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador +=1
print (round(soma,10))
-- EXECUTION TIME:
0.236978
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 9, in <module>
    resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
NameError: name 'resultado' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:41:25) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
while(contador < k):
	resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador +=1
print(round(soma,10))
-- EXECUTION TIME:
0.156329
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 9, in <module>
    resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
NameError: name 'resultado' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:41:28) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
while(contador < k):
	resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador +=1
print(round(soma,10))
-- EXECUTION TIME:
0.195664
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 9, in <module>
    resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
NameError: name 'resultado' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:41:31) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
while(contador < k):
	resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador +=1
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:41:31) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
while(contador < k):
	resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador +=1
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:41:31) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
while(contador < k):
	resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador +=1
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:41:31) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
while(contador < k):
	resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador +=1
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    resultado = resultado + (sinal*(x**expoente/factorial(expoente)))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:41:49) 
-- CODE:
from math import*
x = eval(input("angulo x em radianos: "))
k = int(input("numero de termos da serie: "))
contador = 1
sinal = -1
soma = x
expoente = 3
while(contador < k):
	soma = soma + (sinal*(x**expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador +=1
print(round(soma,10))
-- EXECUTION TIME:
0.154535
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
